Overlay inline extension to fix wrap

--- a/M5 CSS Level 3/style.css
+++ b/M5 CSS Level 3/style.css
@@ -28,14 +28,15 @@ img {
 
 .overlay {
   position: absolute;
-  top: 20%;
-  left: 45%;
+  top: 18%;
+  left: 50%;
   transform: translate(-50%, -50%);
+  inline-size: 120%;
 }
 
 .amazing {
   font-family: "Permanent Marker", cursive;
-  line-height: 100%;
+  line-height: 120%;
   font-size: 48px;
   color: white;
   text-shadow:
@@ -50,13 +51,15 @@ img {
 }
 
 @media screen and (max-width: 768px){
-  .amazing {
+  .overlay {
+    top: 14%;
     font-size: 34px;
   }
 }
 
 @media screen and (max-width: 480px){
-  .amazing {
+  .overlay {
+    top: 12%;
     font-size: 30px;
   }
 }
